--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -50,30 +50,11 @@
 }
 /* <!-- =========================================     FONT FAMILY     ================================================== --> */
 @font-face {
-  font-family: "neuemachinalight";
-  src: url("../font-family/NeueMachina-Light.otf");
-}
-
-@font-face {
   font-family: "neuemachinaregular";
   src: url("../font-family/NeueMachina-Regular.otf");
 }
-
-@font-face {
-  font-family: "neuemachinaultrabold";
-  src: url("../font-family/NeueMachina-Ultrabold.otf");
-}
-
-.ff-neuemachina-light {
-  font-family: "neuemachinalight";
-}
-
 .ff-neuemachina-regular {
   font-family: "neuemachinaregular";
-}
-
-.ff-neuemachina-bold {
-  font-family: "neuemachinaultrabold";
 }
 .ff-raleway {
   font-family: "Raleway", sans-serif;
@@ -101,6 +82,7 @@ body {
   opacity: 74%;
   bottom: 0;
   content: "";
+  z-index: 0;
   top: 0;
   left: 0;
   right: 0;
@@ -330,7 +312,7 @@ body {
     height: 20px;
     background: transparent;
     position: relative;
-    z-index: 5;
+    z-index: 11;
     transition: all 300ms linear;
     display: flex;
     align-items: center;
@@ -351,12 +333,12 @@ body {
     min-height: 100vh;
     position: fixed;
     display: flex;
-    z-index: 4;
+    z-index: 10;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: var(--persian-blue);
-    transition: all 300ms linear;
+    transition: 300ms linear !important;
   }
   .left-0 {
     left: 0;
@@ -364,12 +346,7 @@ body {
   .left-minus-100 {
     left: -100%;
   }
-  .d-none {
-    display: none;
-  }
-  .d-block {
-    display: block;
-  }
+
   .crossline1 .naviconline1 {
     transform: rotate(45deg) translate(12px, 15px);
   }
